--- a/src/app/modules/default/dashboard/dashboard.component.html
+++ b/src/app/modules/default/dashboard/dashboard.component.html
@@ -6,23 +6,23 @@
 <mat-divider></mat-divider>
 <br>
 
-<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px" class="stats-cards">
-    <mat-card fxFlex="24">
+<div fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="1" class="stats-cards">
+    <mat-card fxFlex.gt-sm="24" fxFlex.sm="49" fxFlex="99">
         <app-widget-card
             label="New users" total="12k" percentage="50">
         </app-widget-card>
     </mat-card>
-    <mat-card fxFlex="24">
+    <mat-card fxFlex.gt-sm="24" fxFlex.sm="49" fxFlex="99">
         <app-widget-card
             label="Users redention" total="10k" percentage="40">
         </app-widget-card>
     </mat-card>
-    <mat-card fxFlex="24">
+    <mat-card fxFlex.gt-sm="24" fxFlex.sm="49" fxFlex="99">
         <app-widget-card
             label="Users engagament" total="8k" percentage="30">
         </app-widget-card>
     </mat-card>
-    <mat-card fxFlex="24">
+    <mat-card fxFlex.gt-sm="24" fxFlex.sm="49" fxFlex="99">
         <app-widget-card
             label="Users" total="18k" percentage="20">
         </app-widget-card>
