Sistema de grid com bootstrap

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,8 +6,10 @@
 
         <span>APP LOGO</span>
 
-        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
-            <ul fxLayout="row" fxLayoutGap="20px">
+        <span class="spacer"></span>
+
+        <div>
+            <ul class="d-flex mt-2">
                 <li>
                     <button mat-icon-button>
                         <mat-icon>settings</mat-icon>
